--- a/Jobsheet_02.ipynb
+++ b/Jobsheet_02.ipynb
@@ -51,6 +51,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Tugas Kecil"
+      ],
+      "metadata": {
+        "id": "cwE28TxYYqrR"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -131,6 +140,15 @@
         "y_pred = clf.predict(x_test_flat)\n",
         "print(\"Akurasi:\", accuracy_score(y_test, y_pred))"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tugas Kecil"
+      ],
+      "metadata": {
+        "id": "XaujZY_qYv6a"
+      }
     },
     {
       "cell_type": "code",
@@ -641,7 +659,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -765,7 +783,7 @@
         "id": "go8GI3OOuqV-",
         "outputId": "16bbea1d-1bdd-49e9-ae05-a3ab6713274d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -841,7 +859,7 @@
         "id": "i8jloFTfPG5Y",
         "outputId": "f964910d-8c92-4d5b-97fb-05496aef3136"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,7 +922,7 @@
         "id": "eALTMBqeNG4Y",
         "outputId": "fdefef08-6259-4e11-b773-4ce96aef2bfb"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -980,7 +998,7 @@
         "id": "fRs_gh9WQeC1",
         "outputId": "b85eac7c-6bb7-4c3d-e37c-e47ca679105c"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
