--- a/Jobsheet_02.ipynb
+++ b/Jobsheet_02.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Oka05286/2025_CV_TI2C/blob/main/Jobsheet_02.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "jYBSJvpl29kg"
       },
       "source": [
@@ -280,6 +290,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Tugas Kecil"
+      ],
+      "metadata": {
+        "id": "eooVIeEQZEdl"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -466,6 +485,15 @@
         "\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tugas Kecil"
+      ],
+      "metadata": {
+        "id": "_iftZipIZIal"
+      }
     },
     {
       "cell_type": "code",
@@ -656,6 +684,15 @@
         "\n",
         "plt.show()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tugas Kecil"
+      ],
+      "metadata": {
+        "id": "J75O8UjfZLYO"
+      }
     },
     {
       "cell_type": "code",
@@ -1214,7 +1251,8 @@
         "emdHVxRRVu9B",
         "xySge2ncumZD"
       ],
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
