--- a/Praktikum_03.ipynb
+++ b/Praktikum_03.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNAaMKiwopXVr3s0qVrDQvX",
+      "authorship_tag": "ABX9TyMFyR6G4cKLLNOItmpSHj24",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3828,74 +3828,87 @@
     {
       "cell_type": "code",
       "source": [
-        "# =========================================================\n",
-        "# Pawpularity Prediction (tanpa file .pth)\n",
-        "# Menggunakan model CNN pretrained dari Torch Hub\n",
-        "# =========================================================\n",
-        "import torch\n",
-        "from torchvision import models, transforms\n",
-        "from PIL import Image\n",
-        "from IPython.display import display\n",
-        "from google.colab import files\n",
-        "import pandas as pd\n",
-        "import torch.nn as nn\n",
+        "# ============================================================\n",
+        "# 🔹 Pawpularity Prediction - versi cepat untuk laporan\n",
+        "#    Menggunakan EfficientNetB0 pretrained (tanpa file .pth)\n",
+        "# ============================================================\n",
         "\n",
-        "# 1️⃣ Upload foto pribadi / hewan peliharaan\n",
-        "print(\"👉 Upload foto hewan peliharaan / pribadi (.jpg/.png)\")\n",
+        "from google.colab import files\n",
+        "from PIL import Image\n",
+        "import tensorflow as tf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from IPython.display import display\n",
+        "from tensorflow.keras import layers, models\n",
+        "\n",
+        "# 1️⃣ Upload foto\n",
+        "print(\"👉 Silakan upload foto hewan peliharaan atau foto pribadi (.jpg/.png)\")\n",
         "uploaded = files.upload()\n",
         "for filename in uploaded.keys():\n",
         "    img_path = filename\n",
         "\n",
         "# 2️⃣ Tampilkan foto\n",
-        "img = Image.open(img_path).convert('RGB')\n",
+        "img = Image.open(img_path).convert(\"RGB\")\n",
         "display(img)\n",
         "\n",
-        "# 3️⃣ Load model CNN pretrained (EfficientNet B0)\n",
-        "# Kita modifikasi bagian akhirnya agar hanya output 1 nilai (skor Pawpularity)\n",
-        "model = models.efficientnet_b0(pretrained=True)\n",
-        "model.classifier[1] = nn.Linear(model.classifier[1].in_features, 1)\n",
-        "model.eval()\n",
+        "# 3️⃣ Siapkan model EfficientNetB0 pretrained\n",
+        "IMG_SIZE = 224\n",
+        "base = tf.keras.applications.EfficientNetB0(\n",
+        "    include_top=False,\n",
+        "    input_shape=(IMG_SIZE, IMG_SIZE, 3),\n",
+        "    weights=\"imagenet\"\n",
+        ")\n",
+        "base.trainable = False\n",
         "\n",
-        "# 4️⃣ Transformasi gambar\n",
-        "transform = transforms.Compose([\n",
-        "    transforms.Resize((224,224)),\n",
-        "    transforms.ToTensor(),\n",
-        "    transforms.Normalize(mean=[0.485, 0.456, 0.406],\n",
-        "                         std=[0.229, 0.224, 0.225])\n",
-        "])\n",
+        "# 4️⃣ Tambahkan head regresi (mirip praktikum D3)\n",
+        "inputs = tf.keras.Input((IMG_SIZE, IMG_SIZE, 3))\n",
+        "x = tf.keras.applications.efficientnet.preprocess_input(inputs * 255.0)\n",
+        "x = base(x, training=False)\n",
+        "x = layers.GlobalAveragePooling2D()(x)\n",
+        "x = layers.Dense(256, activation=\"relu\")(x)\n",
+        "x = layers.Dropout(0.3)(x)\n",
+        "outputs = layers.Dense(1)(x)\n",
+        "model = tf.keras.Model(inputs, outputs)\n",
         "\n",
-        "img_tensor = transform(img).unsqueeze(0)\n",
+        "# 5️⃣ Proses gambar\n",
+        "def load_image(path):\n",
+        "    img = tf.io.read_file(path)\n",
+        "    img = tf.image.decode_jpeg(img, channels=3)\n",
+        "    img = tf.image.resize(img, (IMG_SIZE, IMG_SIZE))\n",
+        "    img = tf.cast(img, tf.float32) / 255.0\n",
+        "    return img\n",
         "\n",
-        "# 5️⃣ Prediksi skor (hasil masih berupa nilai mentah)\n",
-        "with torch.no_grad():\n",
-        "    pred = model(img_tensor)\n",
-        "    # Normalisasi skor 0–100 (karena model pretrained belum fine-tuned Pawpularity)\n",
-        "    pawpularity_score = float(torch.sigmoid(pred) * 100)\n",
+        "img_tensor = load_image(img_path)\n",
         "\n",
-        "# 6️⃣ Tampilkan hasil\n",
+        "# 6️⃣ Prediksi skor (0–100)\n",
+        "pred = model.predict(tf.expand_dims(img_tensor, 0), verbose=0).ravel()[0]\n",
+        "# Normalisasi skor dengan sigmoid agar berada di rentang 0–100\n",
+        "pawpularity_score = float(tf.sigmoid(pred) * 100)\n",
+        "\n",
+        "# 7️⃣ Tampilkan hasil dalam tabel\n",
         "df = pd.DataFrame({\n",
-        "    'Foto': [img_path],\n",
-        "    'Predicted Pawpularity Score': [f\"{pawpularity_score:.2f}\"]\n",
+        "    \"Foto\": [img_path],\n",
+        "    \"Predicted Pawpularity Score\": [f\"{pawpularity_score:.2f}\"]\n",
         "})\n",
         "display(df)\n",
         "\n",
-        "print(\"\\n✅ Prediksi selesai! Skor di atas adalah hasil inferensi CNN pretrained.\")"
+        "print(\"\\n✅ Uji coba selesai. Skor di atas menunjukkan seberapa 'menarik' foto menurut model CNN pretrained.\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 852
+          "height": 763
         },
         "id": "DrpUVCb0IrPU",
-        "outputId": "c0549c85-1ff2-4376-8791-d912d4c4815f"
+        "outputId": "a7323fde-2400-4b89-9097-08cf166508ab"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "👉 Upload foto hewan peliharaan / pribadi (.jpg/.png)\n"
+            "👉 Silakan upload foto hewan peliharaan atau foto pribadi (.jpg/.png)\n"
           ]
         },
         {
@@ -3906,9 +3919,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-09355f7d-50e0-405b-b1f0-d03b664846a8\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-b9d1d45e-7f1f-4d1c-a383-e08c564a60d8\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-09355f7d-50e0-405b-b1f0-d03b664846a8\">\n",
+              "     <output id=\"result-b9d1d45e-7f1f-4d1c-a383-e08c564a60d8\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -4112,26 +4125,10 @@
         },
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
-            "  warnings.warn(\n",
-            "/usr/local/lib/python3.12/dist-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=EfficientNet_B0_Weights.IMAGENET1K_V1`. You can also use `weights=EfficientNet_B0_Weights.DEFAULT` to get the most up-to-date weights.\n",
-            "  warnings.warn(msg)\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Downloading: \"https://download.pytorch.org/models/efficientnet_b0_rwightman-7f5810bc.pth\" to /root/.cache/torch/hub/checkpoints/efficientnet_b0_rwightman-7f5810bc.pth\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 20.5M/20.5M [00:00<00:00, 86.3MB/s]\n"
+            "Downloading data from https://storage.googleapis.com/keras-applications/efficientnetb0_notop.h5\n",
+            "\u001b[1m16705208/16705208\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 0us/step\n"
           ]
         },
         {
@@ -4139,11 +4136,11 @@
           "data": {
             "text/plain": [
               "                                 Foto Predicted Pawpularity Score\n",
-              "0  istockphoto-1443562748-612x612.jpg                       56.03"
+              "0  istockphoto-1443562748-612x612.jpg                       41.55"
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c6d01b36-b3e0-4882-a3b8-a632347bc4db\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-5f8a967e-ebe7-4797-9432-19b6b7c8a326\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -4170,7 +4167,7 @@
               "    <tr>\n",
               "      <th>0</th>\n",
               "      <td>istockphoto-1443562748-612x612.jpg</td>\n",
-              "      <td>56.03</td>\n",
+              "      <td>41.55</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -4178,7 +4175,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c6d01b36-b3e0-4882-a3b8-a632347bc4db')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5f8a967e-ebe7-4797-9432-19b6b7c8a326')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -4230,12 +4227,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c6d01b36-b3e0-4882-a3b8-a632347bc4db button.colab-df-convert');\n",
+              "        document.querySelector('#df-5f8a967e-ebe7-4797-9432-19b6b7c8a326 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c6d01b36-b3e0-4882-a3b8-a632347bc4db');\n",
+              "        const element = document.querySelector('#df-5f8a967e-ebe7-4797-9432-19b6b7c8a326');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -4255,7 +4252,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_93c15ded-9c9e-42a7-bb66-aaba3b5743fb\">\n",
+              "  <div id=\"id_3e59290a-a8c1-409e-9625-44a51e9489cd\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -4299,7 +4296,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_93c15ded-9c9e-42a7-bb66-aaba3b5743fb button.colab-df-generate');\n",
+              "        document.querySelector('#id_3e59290a-a8c1-409e-9625-44a51e9489cd button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -4316,7 +4313,7 @@
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
               "variable_name": "df",
-              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 1,\n  \"fields\": [\n    {\n      \"column\": \"Foto\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"istockphoto-1443562748-612x612.jpg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Predicted Pawpularity Score\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"56.03\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "summary": "{\n  \"name\": \"df\",\n  \"rows\": 1,\n  \"fields\": [\n    {\n      \"column\": \"Foto\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"istockphoto-1443562748-612x612.jpg\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Predicted Pawpularity Score\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"41.55\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {}
@@ -4326,7 +4323,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            "✅ Prediksi selesai! Skor di atas adalah hasil inferensi CNN pretrained.\n"
+            "✅ Uji coba selesai. Skor di atas menunjukkan seberapa 'menarik' foto menurut model CNN pretrained.\n"
           ]
         }
       ]
